Update Config Edge Threat page.

--- a/less/app.less
+++ b/less/app.less
@@ -693,6 +693,18 @@ i.c-checkbox.fg-checkbox {
         font-size: 1.2em;
       }
     }
+    &.edge-options {
+      #edgeBtns {
+        position: absolute;
+        right: 15px;
+        top: 6px;
+      }
+      .search-options {
+        position: absolute;
+        right: 340px;
+        top: 4px;
+      }
+    }
   }
   header.main-header {
     position: relative;
