--- a/less/modal.less
+++ b/less/modal.less
@@ -877,6 +877,14 @@ html[data-theme='dark'] {
         section {
           float: right;
           cursor: pointer;
+          .multi-items {
+            overflow: hidden;
+            span {
+              display: block;
+              float: left;
+              margin-left: 10px;
+            }
+          }
         }
       }
       ul {
@@ -915,12 +923,6 @@ html[data-theme='dark'] {
       }
       .payload {
         padding: 0 10px;
-        .encode {
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          padding: .3em .5em;
-        }
         ul {
           background-color: var(--contentBackground) !important;
         }
