--- a/less/app.less
+++ b/less/app.less
@@ -1667,7 +1667,7 @@ i.c-checkbox.fg-checkbox {
               background-color: var(--primaryContentBackground);
               &:hover {
                 background-color: var(--dashboardMapsHover);
-                .details {
+                .view-details {
                   color: var(--buttonTextColor);
                 }
               }
@@ -1759,7 +1759,7 @@ i.c-checkbox.fg-checkbox {
                   }
                 }
               }
-              .details {
+              .view-details {
                 float: right;
                 color: var(--tabMenuText);
                 font-weight: bold;
@@ -1768,7 +1768,7 @@ i.c-checkbox.fg-checkbox {
                 padding: 6px 12px;
                 border: 2px solid #d9d9d9;
                 border-radius: 15px;
-                cursor: not-allowed;
+                cursor: pointer;
               }
             }
           }
