--- a/less/app.less
+++ b/less/app.less
@@ -724,17 +724,30 @@ footer.footer {
 			white-space: nowrap;
 
 			.table-kpi {
-				border: 1px solid #ccc;
-				border-radius: 5px;
-				white-space: pre-wrap;
-				word-break: break-all;
 				margin: 10px;
 				margin-top: 30px;
-				max-height: 250px;
-				overflow-y: auto;
 
-				.c-table {
+				.c-table.head {
 					width: 100%;
+				}
+				.pdata {
+					border: 1px solid #ccc;
+					border-radius: 5px;
+					white-space: pre-wrap;
+					word-break: break-all;	
+					
+					max-height: 250px;
+					overflow-y: auto;
+
+					.c-table.data {
+						width: 100%;
+
+						thead {
+							th {
+								padding: 0px 0px !important;
+							}
+						}
+					}
 				}
 				.fg-close {
 					position: absolute;
