Implement Safety Scan and Network Behavior for Host Analysis dialog. Move Network Behavior info to a separate component.

--- a/less/app.less
+++ b/less/app.less
@@ -1673,13 +1673,14 @@ i.c-checkbox.fg-checkbox {
               }
               .device {
                 float: left;
-                width: 115px;
+                width: 55px;
+                height: 55px;
                 margin-top: 5px;
-                margin-right: 20px;
-                text-align: center;
-                img {
-                  width: 3.5em;
-                }
+                margin-left: 40px;
+                margin-right: 40px;
+                -webkit-mask: url('/images/ic_host.svg');
+                mask: url('/images/ic_host.svg');
+                background-color: var(--primaryTextColor);
               }
               .info {
                 float: left;
