Continue working on the Host Assessment page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1038,8 +1038,13 @@ html[data-theme='dark'] {
       }
     }
   }
-  .scan-info .info-content .dashboard-wrapper {
-    height: 100%;
+  .scan-info .info-content {
+    .dashboard-wrapper {
+      height: 100%;
+    }
+    .table {
+      max-height: 440px;
+    }
   }
 }
 /* configuration/topology/inventory */
