Add refresh button for HMD and fix various HMD bugs.

--- a/less/modal.less
+++ b/less/modal.less
@@ -527,6 +527,11 @@ html[data-theme='dark'] {
         height: 50px;
         padding-top: 15px;
         overflow: hidden;
+        .refresh {
+          position: absolute;
+          top: 15px;
+          left: -5px;
+        }
         .last-update {
           float: right;
           margin-top: 5px;
@@ -1009,7 +1014,7 @@ html[data-theme='dark'] {
         }
       }
       .dashboard-wrapper {
-        height: 365px;
+        height: 360px;
       }
       .scan-wrapper {
         margin-top: 5px;
