Implement multi input box for Yara rule path.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1586,6 +1586,7 @@ html[data-theme='dark'] {
   }
 }
 #yaraRuleDialog-content {
+  max-height: 500px;
   width: 600px;
   .radio-group {
     flex-direction: row;
@@ -1596,6 +1597,12 @@ html[data-theme='dark'] {
     margin-right: 10px;
     input {
       width: 20px;
+    }
+  }
+  .path-input {
+    width: 100%;
+    .error {
+      border-color: #d0021b;
     }
   }
 }
