Replace multiEmail library with react-ui component for HMD settings tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -753,6 +753,15 @@ html[data-theme='dark'] {
               }
             }
           }
+          .path-group {
+            margin-bottom: 20px;
+            .path-input {
+              width: 255px;
+              .error {
+                border-color: #da364a;
+              }
+            }
+          }
         }
       }
     }
