Replace Malware path email with React-ui component in HMD settings.

--- a/less/app.less
+++ b/less/app.less
@@ -2655,6 +2655,16 @@ i.c-checkbox.fg-checkbox {
             }
           }
         }
+        .hmd-settings {
+          height: 70vh;
+          overflow-y: auto;
+          .file-path .group {
+            width: 207px !important;
+          }
+          .path-input .error {
+            border-color: #d10d25;
+          }
+        }
       }
     }
     .map-container { //For Config Topology Map page
