Add task failure logic for HMD info display.

--- a/less/modal.less
+++ b/less/modal.less
@@ -893,6 +893,7 @@ html[data-theme='dark'] {
           float: right;
           cursor: pointer;
           .multi-items {
+            float: right;
             overflow: hidden;
             span {
               display: block;
