Minor fix for multi input styles.

--- a/less/app.less
+++ b/less/app.less
@@ -1358,6 +1358,11 @@ i.c-checkbox.fg-checkbox {
     .config-notify,
     .auto-settings {
       overflow-y: auto;
+      #autoSettingsIpRange {
+        .group {
+          padding: 5px;
+        }
+      }
     }
     .parent-content {
       flex-grow: 1;
