Complete the Group Management page for Config Edge.

--- a/less/app.less
+++ b/less/app.less
@@ -2341,7 +2341,8 @@ i.c-checkbox.fg-checkbox {
           tbody tr {
             height: 45px;
           }
-          td.patternName {
+          td.patternName,
+          td.groupList {
             .flex-item {
               display: flex;
               flex-wrap: wrap;
