--- a/less/modal.less
+++ b/less/modal.less
@@ -1629,6 +1629,11 @@ html[data-theme='dark'] {
 #encodeDecodeAction {
   z-index: 10000;
 }
+#selectGroupDialog-dialog {
+  .fg-close {
+    display: none;
+  }
+}
 #selectGroupDialog-content {
   width: 350px;
   height: 400px;
