--- a/less/app.less
+++ b/less/app.less
@@ -519,28 +519,24 @@ i.c-checkbox.fg-checkbox {
   }
   .gis-polyline {
     animation-name: path;
-    //stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    //animation-duration: 5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-fill-mode: forwards;
   }
   @keyframes path {
-    //0%   {opacity: .1;}
-    //30%  {opacity: .5;}
-    //60%  {opacity: .7;}
     100% {opacity: 1; stroke-dashoffset: 0;}
   }
   .spot-big .gis-spot {
     animation-name: spotChange;
     animation-duration: 1s;
     animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
   @keyframes spotChange {
-    0%   {opacity: 1;}
-    50%  {opacity: .3;}
-    100% {opacity: 1;}
+    0%   {opacity: 1; transform: scaleX(0) scaleY(0);}
+    70%  {opacity: .3; transform: scaleX(1) scaleY(1);}
+    100% {opacity: 0; transform: scaleX(1.5) scaleY(1.5);}
   }
 }
 #gisMap {
@@ -769,14 +765,19 @@ i.c-checkbox.fg-checkbox {
       padding-right: 5px;
       overflow-y: auto;
       z-index: 3000;
+      &::-webkit-scrollbar-track {
+        background-color: rgba(0,0,0,0.7);
+      }
+      &::-webkit-scrollbar-thumb {
+        background: #004d93;
+      }
       li {
         display: block;
         color: #fff;
         border-radius: 5px;
         padding: 10px;
         margin-bottom: 6px;
-        opacity: .8;
-        background-color: #000;
+        background-color: rgba(0,0,0,0.7);
         overflow: hidden;
         .count {
           float: left;
@@ -823,8 +824,7 @@ i.c-checkbox.fg-checkbox {
         margin: 10px 20px;
         padding: 10px 30px;
         line-height: 25px;
-        opacity: 0.6;
-        background-color: #000;
+        background-color: rgba(0,0,0,0.7);
         border-radius: 5px;
         .fg-checkbox-fill {
           float: left;
