--- a/less/app.less
+++ b/less/app.less
@@ -2937,3 +2937,17 @@ i.c-checkbox.fg-checkbox {
     }
   }
 }
+
+.incident-statistics {
+  display: flex;
+
+  .block {
+    width: 25%;
+    margin: 10px 30px;
+    padding: 10px;
+    border: 1px #555555 solid;
+    border-radius: 5px;
+    text-align: center;
+    
+  }
+}
