--- a/less/modal.less
+++ b/less/modal.less
@@ -530,16 +530,16 @@ html[data-theme='dark'] {
         .refresh {
           position: absolute;
           top: 15px;
-          left: -5px;
+          left: 0;
         }
         .last-update {
           float: right;
           margin-top: 5px;
+          margin-right: 10px;
         }
         .btn {
           float: right;
           padding: .3em .5em;
-          margin-left: 10px;
         }
       }
       .table {
@@ -706,10 +706,45 @@ html[data-theme='dark'] {
       }
       .settings {
         position: relative;
+        overflow: hidden;
+        .btn {
+          padding: .3em .5em;
+        }
+        & > button,
+        .edit-btns {
+          position: absolute;
+          top: 15px;
+        }
+        .edit,
+        .edit-btns {
+          right: 10px;
+        }
+        .edit-btns {
+          .cancel,
+          .save,
+          .restore-default {
+            float: right;
+          }
+          .save,
+          .restore-default {
+            margin-right: 5px;
+          }
+        }
         .settings-wrapper {
+          margin-top: 60px;
           overflow-y: auto;
           header {
             float: left;
+            padding-left: 10px;
+          }
+          .settings-group {
+            position: relative;
+            border-top: 2px solid var(--primaryBorder);
+            .info {
+              position: absolute;
+              top: 0;
+              right: 10px;
+            }
           }
           .toggle-btn {
             float: left;
@@ -718,54 +753,39 @@ html[data-theme='dark'] {
               display: inherit;
             }
           }
-        }
-        .options-btn {
-          float: right;
-          margin-top: 10px;
-          margin-right: 10px;
-          .btn {
-            padding: .3em .5em;
-          }
-          .restore-default,
-          .save,
-          .cancel {
-            float: right;
-          }
-          .restore-default,
-          .save {
-            margin-right: 5px;
-          }
-        }
-        .settings-form {
-          margin: 0 10px;
-          clear: both;
-          .form-group {
-            margin-bottom: 20px;
-            label {
-              display: block;
-              text-align: left;
-              font-size: .9em;
-              color: var(--primaryContentHeader);
-              margin-bottom: 3px;
-            }
-            .flex-item {
-              margin-top: 10px;
-              span {
-                font-size: 14px;
-                color: #fff;
-                padding: 5px 10px;
-                margin: 3px 2px;
-                border-radius: 5px;
-                background-color: var(--primaryContentHeader);
+          .settings-form {
+            margin: 0 10px;
+            clear: both;
+            .form-group {
+              margin-bottom: 10px;
+              label {
+                display: block;
+                text-align: left;
+                font-size: .9em;
+                color: var(--primaryContentHeader);
+                margin-bottom: 3px;
+              }
+              .flex-item {
+                span {
+                  font-size: 14px;
+                  color: #fff;
+                  padding: 5px 10px;
+                  margin: 3px 2px;
+                  border-radius: 5px;
+                  background-color: var(--primaryContentHeader);
+                }
               }
             }
-          }
-          .path-group {
-            margin-bottom: 20px;
-            .path-input {
-              width: 255px;
-              .error {
-                border-color: #da364a;
+            .path-group {
+              margin-bottom: 20px;
+              .path-input {
+                width: 1000px;
+                &.short {
+                  width: 255px;
+                }
+                .error {
+                  border-color: #da364a;
+                }
               }
             }
           }
@@ -1040,7 +1060,7 @@ html[data-theme='dark'] {
         }
       }
       .settings-wrapper {
-        height: 340px;
+        height: 330px;
       }
     }
   }
@@ -1070,7 +1090,7 @@ html[data-theme='dark'] {
         }
       }
       .settings-wrapper {
-        height: 455px;
+        height: 445px;
       }      
     }
   }
