Modify the data logic for Process Monitor type for HMD settings.

--- a/less/modal.less
+++ b/less/modal.less
@@ -757,7 +757,7 @@ html[data-theme='dark'] {
             margin: 0 10px;
             clear: both;
             .form-group {
-              margin-bottom: 10px;
+              margin-bottom: 5px;
               label {
                 display: block;
                 text-align: left;
@@ -765,7 +765,15 @@ html[data-theme='dark'] {
                 color: var(--primaryContentHeader);
                 margin-bottom: 3px;
               }
-              .flex-item {
+              .path-item {
+                .item {
+                  display: inline-block;
+                  margin-top: 8px;
+                  margin-bottom: 15px;
+                }
+                .block {
+                  display: block;
+                }
                 span {
                   font-size: 14px;
                   color: #fff;
@@ -779,7 +787,7 @@ html[data-theme='dark'] {
             .path-group {
               margin-bottom: 20px;
               .path-input {
-                width: 1000px;
+                width: 1130px;
                 &.short {
                   width: 255px;
                 }
