Continue work on the Host Assessment page.

--- a/less/app.less
+++ b/less/app.less
@@ -652,7 +652,7 @@ i.c-checkbox.fg-checkbox {
       }
       .datepicker {
         float: left;
-        .daterange {
+        .date-range {
           margin-right: 15px;
         }
         .fg {
